# Sunmait-Internship

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  diabetes_prediction.ipynb  homework1.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.qodo/: history.sqlite
tests/: test_simple.py
